# Sruti

./: .gitignore  README.md  pyproject.toml
prompts/: s05_cleanup.txt  s06_classification.txt
sruti/: __init__.py  cli.py  config.py
sruti/application/: batch_scheduler.py  context.py  orchestrator.py  project_service.py  run_service.py  run_state.py  stage_runner.py
sruti/application/stages/: __init__.py  _llm_text_transform.py  s01_normalize_uc.py  s02_chunk_uc.py  s03_asr_whisper_uc.py  s04_merge_uc.py  s05_asr_cleanup_uc.py  s06_remove_nonlecture_uc.py  s07_editorial_uc.py  s08_condense_uc.py  s08_translate_faithful_uc.py  s09_translate_edit_uc.py  s09_translate_faithful_uc.py  s10_translate_edit_uc.py
sruti/domain/: enums.py  errors.py  models.py  policies.py  ports.py
sruti/gui/: __init__.py  app.py  job_manager.py  prompt_catalog.py
sruti/gui/static/: app.css  app.js
sruti/gui/templates/: base.html  batch_run_detail.html  dashboard.html  new_project.html  project_detail.html  prompts.html  settings.html  stage_detail.html
sruti/infrastructure/: asr_whisper_cli.py  audio_ffmpeg.py  fs_repository.py  json_codec.py  llm_factory.py  llm_ollama.py  llm_openai.py  subprocess_runner.py
sruti/llm/: chunking.py  prompts.py  runtime.py
sruti/stages/: __init__.py  s01_normalize.py  s02_chunk.py  s03_asr_whispercli.py  s04_merge.py  s05_asr_cleanup.py  s06_remove_nonlecture.py  s07_editorial.py  s08_condense.py  s08_translate_faithful.py  s09_translate_edit.py  s09_translate_faithful.py  s10_translate_edit.py
sruti/util/: hashes.py  io.py  manifest.py  system.py
tests/e2e/: test_full_pipeline_simulated.py
tests/integration/: test_cli_run_dispatch.py  test_gui_app.py
tests/unit/: test_batch_scheduler.py  test_chunking.py  test_config.py  test_context.py  test_llm_factory.py  test_llm_ollama.py  test_llm_openai.py  test_llm_runtime.py  test_policies.py  test_project_service.py  test_prompts.py  test_run_service.py  test_s01_normalize.py  test_s02_chunk.py  test_s03_asr_whisper.py  test_s04_merge.py  test_s05_asr_cleanup.py  test_s06_remove_nonlecture.py  test_s07_editorial.py  test_s08_condense.py  test_s08_translate.py  test_s09_translate_edit.py  test_stage_runtime.py
(+9 files in other folders)
